# vtts

./: .gitignore  LICENSE  README.es.md  README.md  config.example.yaml  pyproject.toml
examples/: basic_generation.py  dynamic_join.py  multi_voice.py  voice_clone.py
vtts/: __init__.py  config.py  scheduler.py  server.py  voice_registry.py  worker.py
